@@ -1,6 +1,6 @@
 Package: lattice
-Version: 0.14-13
-Date: 2006/11/02
+Version: 0.14-15
+Date: 2006/11/28
 Priority: recommended
 Title: Lattice Graphics
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
@@ -14,4 +14,4 @@ Enhances: chron
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later
-Packaged: Thu Nov  2 22:09:01 2006; dsarkar
+Packaged: Tue Nov 28 12:24:15 2006; dsarkar
