@@ -1,5 +1,3 @@
-Lattice                 Lattice Graphics
-Rows                    Extract rows from a list
 axis.default            Default axis annotation utilities
 banking                 Banking
 barchart.table          table methods for barchart and dotplot
@@ -12,6 +10,7 @@ environmental           Atmospheric environmental conditions in New
 equal.count             shingles
 ethanol                 Engine exhaust fumes from burning ethanol
 histogram               Histograms and Kernel Density Plots
+Lattice                 Lattice Graphics
 lattice.options         Low-level Options Controlling Behaviour of
                         Lattice
 latticeParseFormula     Parse Trellis formula
@@ -48,6 +47,7 @@ print.trellis           Plot and Summarize Trellis Objects
 qq                      Quantile-Quantile Plots of Two Samples
 qqmath                  Q-Q Plot with Theoretical Distribution
 rfs                     Residual and Fit Spread Plots
+Rows                    Extract rows from a list
 simpleKey               Function to generate a simple key
 singer                  Heights of New York Choral Society singers
 splom                   Scatter Plot Matrices
