@@ -249,8 +249,10 @@ S3method(cloud,       matrix)
 S3method(wireframe,   formula)
 S3method(wireframe,   matrix)
 S3method(splom,       formula)
+S3method(splom,       matrix)
 S3method(splom,       data.frame)
 S3method(parallel,    formula)
+S3method(parallel,    matrix)
 S3method(parallel,    data.frame)
 
 S3method(tmd,         formula)
